# python_plistlib_mod

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
src/: plistlib_mod.py
tests/: test_plistlib.py
