[metadata]
name = plistlib_mod
version = 0.1.0.dev
url = https://github.com/dgelessus/python_plistlib_mod
author = dgelessus
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: MacOS :: MacOS X
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
license = PSF-2.0
license_files =
    LICENSE
description = plistlib from Python 3.8+ with slight enhancements
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    bplist
    keyedarchive
    keyedarchiver
    nskeyedarchiver
    plist
    plistlib

[options]
python_requires = >= 3.10
py_modules = plistlib_mod
package_dir =
    = src
